# python-my-template

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: python-ci.yml
src/: main.py
src/config/: load_log_config.py  logging.yml
src/fizz/: buzz.py
test/: conftest.py
test/unit/: test_fizzbuzz.py
